Fixing alignment of press kit download link on small devices

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -105,6 +105,7 @@ nav > ul {
 
 nav > ul li {
 	padding-left: 50px;
+	text-align: right;
 }
 
 nav > ul li:first-child {
